Update reload plugin

--- a/checker/tests/configs/.rr-checker-init.yaml
+++ b/checker/tests/configs/.rr-checker-init.yaml
@@ -3,7 +3,7 @@ rpc:
   disabled: false
 
 server:
-  command: "php ../../../tests/http/client.php echo pipes"
+  command: "php ../../tests/http/client.php echo pipes"
   user: ""
   group: ""
   env:
