--- a/reload/tests/configs/.rr-reload.yaml
+++ b/reload/tests/configs/.rr-reload.yaml
@@ -1,5 +1,5 @@
 server:
-  command: php ../../../tests/psr-worker-bench.php
+  command: php ../../tests/psr-worker-bench.php
   user: ''
   group: ''
   env:
