Update headers plugin

--- a/headers/tests/configs/.rr-cors-headers.yaml
+++ b/headers/tests/configs/.rr-cors-headers.yaml
@@ -1,5 +1,5 @@
 server:
-  command: "php ../../../tests/http/client.php headers pipes"
+  command: "php ../../tests/http/client.php headers pipes"
   user: ""
   group: ""
   env:
