--- a/headers/tests/configs/.rr-headers-init.yaml
+++ b/headers/tests/configs/.rr-headers-init.yaml
@@ -1,5 +1,5 @@
 server:
-  command: "php ../../../tests/http/client.php echo pipes"
+  command: "php ../../tests/http/client.php echo pipes"
   user: ""
   group: ""
   env:
