--- a/headers/tests/configs/.rr-res-headers.yaml
+++ b/headers/tests/configs/.rr-res-headers.yaml
@@ -1,5 +1,5 @@
 server:
-  command: "php ../../../tests/http/client.php header pipes"
+  command: "php ../../tests/http/client.php header pipes"
   user: ""
   group: ""
   env:
