Update static plugin

--- a/static/tests/configs/.rr-http-static-disabled.yaml
+++ b/static/tests/configs/.rr-http-static-disabled.yaml
@@ -1,5 +1,5 @@
 server:
-  command: "php ../../../tests/http/client.php pid pipes"
+  command: "php ../../tests/http/client.php pid pipes"
   user: ""
   group: ""
   env:
