--- a/static/tests/configs/.rr-http-static-files-disable.yaml
+++ b/static/tests/configs/.rr-http-static-files-disable.yaml
@@ -1,5 +1,5 @@
 server:
-  command: "php ../../../tests/http/client.php echo pipes"
+  command: "php ../../tests/http/client.php echo pipes"
   user: ""
   group: ""
   env:
@@ -16,7 +16,7 @@ http:
   uploads:
     forbid: [ ".php", ".exe", ".bat" ]
   static:
-    dir: "../../../tests"
+    dir: "../../tests"
     forbid: [ ".php" ]
     request:
       "Example-Request-Header": "Value"
