--- a/static/tests/configs/.rr-http-static.yaml
+++ b/static/tests/configs/.rr-http-static.yaml
@@ -1,5 +1,5 @@
 server:
-  command: "php ../../../tests/http/client.php pid pipes"
+  command: "php ../../tests/http/client.php pid pipes"
   user: ""
   group: ""
   env:
@@ -16,7 +16,7 @@ http:
   uploads:
     forbid: [ ".php", ".exe", ".bat" ]
   static:
-    dir: "../../../tests"
+    dir: "../../tests"
     forbid: [ "" ]
     request:
       "input": "custom-header"
