--- a/a_plugin_tests/http/configs/.rr-broken-pipes.yaml
+++ b/a_plugin_tests/http/configs/.rr-broken-pipes.yaml
@@ -3,7 +3,7 @@ rpc:
   disabled: false
 
 server:
-  command: "php ../../../tests/http/client.php echoerr pipes"
+  command: "php ../../tests/http/client.php broken pipes"
   user: ""
   group: ""
   env:
@@ -13,11 +13,11 @@ server:
 
 http:
   debug: true
-  address: 127.0.0.1:8080
+  address: 127.0.0.1:12384
   maxRequestSize: 1024
-  middleware: [ "pluginMiddleware", "pluginMiddleware2" ]
+  middleware: [ "" ]
   uploads:
-    forbid: [ "" ]
+    forbid: [ ".php", ".exe", ".bat" ]
   trustedSubnets: [ "10.0.0.0/8", "127.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16", "::1/128", "fc00::/7", "fe80::/10" ]
   pool:
     numWorkers: 2
@@ -27,4 +27,5 @@ http:
 logs:
   mode: development
   level: error
+
 
