--- a/a_plugin_tests/http/configs/.rr-env.yaml
+++ b/a_plugin_tests/http/configs/.rr-env.yaml
@@ -3,19 +3,22 @@ rpc:
   disabled: false
 
 server:
-  command: "php ../../../tests/http/client.php echo pipes"
+  command: "php ../../tests/http/client.php env pipes"
   user: ""
   group: ""
   env:
-    "RR_HTTP": "true"
+    "env_key": "ENV_VALUE"
   relay: "pipes"
   relayTimeout: "20s"
 
 http:
   debug: true
-  address: 127.0.0.1:18903
+  address: 127.0.0.1:12084
   maxRequestSize: 1024
-  middleware: [ "pluginMiddleware", "pluginMiddleware2" ]
+  middleware: [ "" ]
+  env:
+    "RR_HTTP": "true"
+    "env_key": "ENV_VALUE"
   uploads:
     forbid: [ ".php", ".exe", ".bat" ]
   trustedSubnets: [ "10.0.0.0/8", "127.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16", "::1/128", "fc00::/7", "fe80::/10" ]
@@ -27,5 +30,4 @@ http:
 logs:
   mode: development
   level: error
-
 
