--- a/a_plugin_tests/http/configs/.rr-fcgi.yaml
+++ b/a_plugin_tests/http/configs/.rr-fcgi.yaml
@@ -1,5 +1,5 @@
 server:
-  command: "php ../../../tests/http/client.php echo pipes"
+  command: "php ../../tests/http/client.php echo pipes"
   user: ""
   group: ""
   env:
@@ -9,7 +9,7 @@ server:
 
 http:
   debug: true
-  address: :8087
+  address: :8081
   maxRequestSize: 1024
   middleware: [ "" ]
   uploads:
@@ -22,10 +22,17 @@ http:
     destroyTimeout: 60s
 
   ssl:
-    port: 8895
-    redirect: true
+    port: 8889
+    redirect: false
     cert: fixtures/server.crt
     key: fixtures/server.key
+  #    rootCa: root.crt
+  fcgi:
+    address: tcp://0.0.0.0:6920
+  http2:
+    enabled: false
+    h2c: false
+    maxConcurrentStreams: 128
 logs:
   mode: development
   level: error
