--- a/a_plugin_tests/http/configs/.rr-h2c.yaml
+++ b/a_plugin_tests/http/configs/.rr-h2c.yaml
@@ -1,5 +1,5 @@
 server:
-  command: "php ../../../tests/http/client.php echo pipes"
+  command: "php ../../tests/http/client.php echo pipes"
   user: ""
   group: ""
   env:
@@ -9,7 +9,7 @@ server:
 
 http:
   debug: true
-  address: :8085
+  address: :8083
   maxRequestSize: 1024
   middleware: [ "" ]
   uploads:
@@ -20,18 +20,9 @@ http:
     maxJobs: 0
     allocateTimeout: 60s
     destroyTimeout: 60s
-
-  ssl:
-    port: 8893
-    redirect: false
-    cert: fixtures/server.crt
-    key: fixtures/server.key
-  #    rootCa: root.crt
-  fcgi:
-    address: tcp://0.0.0.0:16920
   http2:
-    enabled: false
-    h2c: false
+    enabled: true
+    h2c: true
     maxConcurrentStreams: 128
 logs:
   mode: development
