--- a/a_plugin_tests/http/configs/.rr-resetter.yaml
+++ b/a_plugin_tests/http/configs/.rr-resetter.yaml
@@ -1,5 +1,9 @@
+rpc:
+  listen: tcp://127.0.0.1:6001
+  disabled: false
+
 server:
-  command: "php ../../../tests/http/client.php push pipes"
+  command: "php ../../tests/http/client.php echo pipes"
   user: ""
   group: ""
   env:
@@ -9,23 +13,18 @@ server:
 
 http:
   debug: true
-  address: :8086
+  address: 127.0.0.1:10084
   maxRequestSize: 1024
   middleware: [ "" ]
   uploads:
     forbid: [ ".php", ".exe", ".bat" ]
   trustedSubnets: [ "10.0.0.0/8", "127.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16", "::1/128", "fc00::/7", "fe80::/10" ]
   pool:
-    numWorkers: 1
+    numWorkers: 2
     maxJobs: 0
     allocateTimeout: 60s
     destroyTimeout: 60s
-
-  ssl:
-    port: 8894
-    redirect: true
-    cert: fixtures/server.crt
-    key: fixtures/server.key
 logs:
   mode: development
   level: error
+
