--- a/a_plugin_tests/http/configs/.rr-ssl-redirect.yaml
+++ b/a_plugin_tests/http/configs/.rr-ssl-redirect.yaml
@@ -1,9 +1,5 @@
-rpc:
-  listen: tcp://127.0.0.1:6001
-  disabled: false
-
 server:
-  command: "php ../../../tests/http/client.php broken pipes"
+  command: "php ../../tests/http/client.php echo pipes"
   user: ""
   group: ""
   env:
@@ -13,19 +9,23 @@ server:
 
 http:
   debug: true
-  address: 127.0.0.1:12384
+  address: :8087
   maxRequestSize: 1024
   middleware: [ "" ]
   uploads:
     forbid: [ ".php", ".exe", ".bat" ]
   trustedSubnets: [ "10.0.0.0/8", "127.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16", "::1/128", "fc00::/7", "fe80::/10" ]
   pool:
-    numWorkers: 2
+    numWorkers: 1
     maxJobs: 0
     allocateTimeout: 60s
     destroyTimeout: 60s
+
+  ssl:
+    port: 8895
+    redirect: true
+    cert: fixtures/server.crt
+    key: fixtures/server.key
 logs:
   mode: development
   level: error
-
-
