--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,56 +65,39 @@ jobs:
       - name: Run golang tests on Windows without codecov
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          go test -v -race -cover -tags=debug ./util
-          go test -v -race -cover -tags=debug ./pkg/pipe
-          go test -v -race -cover -tags=debug ./pkg/pool
-          go test -v -race -cover -tags=debug ./pkg/socket
-          go test -v -race -cover -tags=debug ./pkg/worker
-          go test -v -race -cover -tags=debug ./pkg/worker_watcher
-          go test -v -race -cover -tags=debug ./plugins/rpc
-          go test -v -race -cover -tags=debug ./plugins/rpc/tests
-          go test -v -race -cover -tags=debug ./plugins/config/tests
-          go test -v -race -cover -tags=debug ./plugins/logger/tests
-          go test -v -race -cover -tags=debug ./plugins/server/tests
-          go test -v -race -cover -tags=debug ./plugins/metrics/tests
-          go test -v -race -cover -tags=debug ./plugins/informer/tests
-          go test -v -race -cover -tags=debug ./plugins/resetter/tests
-          go test -v -race -cover -tags=debug ./plugins/http/attributes
-          go test -v -race -cover -tags=debug ./plugins/http/tests
-          go test -v -race -cover -tags=debug ./plugins/gzip/tests
-          go test -v -race -cover -tags=debug ./plugins/static/tests
-          go test -v -race -cover -tags=debug ./plugins/static
-          go test -v -race -cover -tags=debug ./plugins/headers/tests
-          go test -v -race -cover -tags=debug ./plugins/redis/tests
-          go test -v -race -cover -tags=debug ./plugins/checker/tests
+          go test -v -race -cover -tags=debug ./a_plugin_tests/checker
+          go test -v -race -cover -tags=debug ./a_plugin_tests/config
+          go test -v -race -cover -tags=debug ./a_plugin_tests/gzip
+          go test -v -race -cover -tags=debug ./a_plugin_tests/headers
+          go test -v -race -cover -tags=debug ./a_plugin_tests/http
+          go test -v -race -cover -tags=debug ./a_plugin_tests/informer
+          go test -v -race -cover -tags=debug ./a_plugin_tests/logger
+          go test -v -race -cover -tags=debug ./a_plugin_tests/metrics
+          go test -v -race -cover -tags=debug ./a_plugin_tests/redis
+          go test -v -race -cover -tags=debug ./a_plugin_tests/reload
+          go test -v -race -cover -tags=debug ./a_plugin_tests/resetter
+          go test -v -race -cover -tags=debug ./a_plugin_tests/rpc
+          go test -v -race -cover -tags=debug ./a_plugin_tests/server
+          go test -v -race -cover -tags=debug ./a_plugin_tests/static
 
       - name: Run golang tests on Linux and MacOS
         if: ${{ matrix.os == 'ubuntu-20.04' || matrix.os == 'macos-latest' }}
         run: |
           mkdir ./coverage-ci
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/util.txt -covermode=atomic ./util
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/pipe.txt -covermode=atomic ./pkg/pipe
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/pool.txt -covermode=atomic ./pkg/pool
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/socket.txt -covermode=atomic ./pkg/socket
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/worker.txt -covermode=atomic ./pkg/worker
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/worker_watcher.txt -covermode=atomic ./pkg/worker_watcher
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/rpc_config.txt -covermode=atomic ./plugins/rpc
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/rpc.txt -covermode=atomic ./plugins/rpc/tests
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/plugin_config.txt -covermode=atomic ./plugins/config/tests
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/logger.txt -covermode=atomic ./plugins/logger/tests
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/server.txt -covermode=atomic ./plugins/server/tests
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/metrics.txt -covermode=atomic ./plugins/metrics/tests
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/informer.txt -covermode=atomic ./plugins/informer/tests
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/resetter.txt -covermode=atomic ./plugins/resetter/tests
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/attributes.txt -covermode=atomic ./plugins/http/attributes
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/http_tests.txt -covermode=atomic ./plugins/http/tests
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/gzip.txt -covermode=atomic ./plugins/gzip/tests
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/static.txt -covermode=atomic ./plugins/static/tests
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/static_root.txt -covermode=atomic ./plugins/static
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/headers.txt -covermode=atomic ./plugins/headers/tests
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/checker.txt -covermode=atomic ./plugins/checker/tests
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/redis.txt -covermode=atomic ./plugins/redis/tests
-          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/reload.txt -covermode=atomic ./plugins/reload/tests
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/checker.txt -covermode=atomic ./a_plugin_tests/checker
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/config.txt -covermode=atomic ./a_plugin_tests/config
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/gzip.txt -covermode=atomic ./a_plugin_tests/gzip
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/headers.txt -covermode=atomic ./a_plugin_tests/headers
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/http.txt -covermode=atomic ./a_plugin_tests/http
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/informer.txt -covermode=atomic ./a_plugin_tests/informer
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/logger.txt -covermode=atomic ./a_plugin_tests/logger
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/metrics.txt -covermode=atomic ./a_plugin_tests/metrics
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/redis.txt -covermode=atomic ./a_plugin_tests/redis
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/reload.txt -covermode=atomic ./a_plugin_tests/reload
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/resetter.txt -covermode=atomic ./a_plugin_tests/resetter
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/rpc.txt -covermode=atomic ./a_plugin_tests/rpc
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/server.txt -covermode=atomic ./a_plugin_tests/server
+          go test -v -race -cover -tags=debug -coverprofile=./coverage-ci/static.txt -covermode=atomic ./a_plugin_tests/static
           cat ./coverage-ci/*.txt > ./coverage-ci/summary.txt
 
       - uses: codecov/codecov-action@v1 # Docs: <https://github.com/codecov/codecov-action>
