--- a/a_plugin_tests/checker/configs/.rr-checker-init.yaml
+++ b/a_plugin_tests/checker/configs/.rr-checker-init.yaml
@@ -15,7 +15,7 @@ status:
   address: "127.0.0.1:34333"
 logs:
   mode: development
-  level: error
+  level: debug
 http:
   debug: true
   address: 127.0.0.1:11933
