Add GRPC plugin Update documentation
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,11 @@
 	"cSpell.words": [
 		"AMQP",
 		"amqpjobs",
-		"mdwr"
-	]
+		"mdwr",
+		"unmarshal"
+	],
+
+	"files.associations": {
+		"Dockerfile-*.yaml": "dockerfile"
+	}
 }
