Move common and proto folders to the internal
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,12 @@
 	"cSpell.words": [
 		"AMQP",
 		"amqpjobs",
+		"extendee",
+		"Idxs",
 		"mdwr",
+		"protobuf",
+		"protoc",
+		"protoimpl",
 		"unmarshal"
 	],
 
