Remove fasthttp/ws, replace with low-level library Update deps
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,9 @@
 		"tcreds",
 		"tmpdir",
 		"unmarshal",
-		"Upgrader"
+		"Upgrader",
+		"websocketsv",
+		"wsutil"
 	],
 
 	"files.associations": {
