Broadcast and ws plugins are turned off
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -13,6 +13,8 @@ coverage:
 
 # do not include tests folders
 ignore:
+  - "broadcast"
+  - "transport/protocols/websockets"
   - "internal"
   - "tests"
   - "metrics/config_test.go"
