--- a/tests/plugins/service/configs/.rr-service-error.yaml
+++ b/tests/plugins/service/configs/.rr-service-error.yaml
@@ -2,6 +2,8 @@ service:
   some_service_1:
     command: "php test_files/loopo.php"
     process_num: 1
+    color: "green"
+    err_color: "red"
     exec_timeout: 5s # s,m,h (seconds, minutes, hours)
     remain_after_exit: true
     restart_sec: 1
