--- a/tests/plugins/jobs/nats/.rr-no-global.yaml
+++ b/tests/plugins/jobs/nats/.rr-no-global.yaml
@@ -25,23 +25,22 @@ jobs:
   # list of broker pipelines associated with endpoints
   pipelines:
     test-1:
-      driver: amqp
-      priority: 1
-      pipeline_size: 100
+      driver: nats
+      prefetch: 100
       queue: test-1-queue
-      exchange: default
-      exchange_type: direct
-      routing_key: test
+      subject: "default"
+      stream: "foo"
+      deliver_new: "true"
+      priority: 1
 
     test-2:
-      driver: amqp
-      priority: 2
-      pipeline_size: 100
+      driver: nats
+      prefetch: 100
       queue: test-2-queue
-      exchange: default
-      exchange_type: direct
-      routing_key: test-2
+      subject: "default"
+      stream: "foo"
+      deliver_new: "true"
+      priority: 2
 
-  # list of pipelines to be consumed by the server, keep empty if you want to start consuming manually
   consume: [ "test-1", "test-2" ]
 
