--- a/tests/plugins/jobs/amqp/.rr-amqp-resp-jobs-ok.yaml
+++ b/tests/plugins/jobs/amqp/.rr-amqp-resp-jobs-ok.yaml
@@ -2,12 +2,12 @@ rpc:
   listen: tcp://127.0.0.1:6001
 
 server:
-  command: "php ../../jobs_ok.php"
+  command: "php ../../jobs_respond.php"
   relay: "pipes"
   relay_timeout: "20s"
 
-nats:
-  addr: ""
+amqp:
+  addr: amqp://guest:guest@127.0.0.1:5672/
 
 logs:
   level: debug
@@ -17,28 +17,23 @@ logs:
 jobs:
   num_pollers: 1
   pipeline_size: 100000
-  timeout: 1
   pool:
     num_workers: 10
     max_jobs: 0
     allocate_timeout: 60s
     destroy_timeout: 60s
-
   pipelines:
     test-1:
-      driver: nats
+      driver: amqp
       prefetch: 100
-      subject: "default"
-      stream: "foo"
-      deliver_new: "true"
+      queue: test-1-queue
       priority: 1
+      exchange: amqp.default
+      exchange_type: direct
+      routing_key: test-1-queue
+      exclusive: false
+      multiple_ack: false
+      requeue_on_fail: false
 
-    test-2:
-      driver: nats
-      prefetch: 100
-      subject: "default"
-      stream: "foo"
-      deliver_new: "true"
-      priority: 2
 
-  consume: [ "test-1", "test-2" ]
+  consume: [ "test-1" ]
