new TCP-based protocol
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/tests/plugins/tcp/configs/.rr-tcp-init.yaml
+++ b/tests/plugins/tcp/configs/.rr-tcp-init.yaml
@@ -8,10 +8,10 @@ tcp:
   servers:
     tcp_access_point_1:
       addr: tcp://127.0.0.1:7777
-      delimiter: '\r\n'
-    server2:
-      addr: tcp://127.0.0.1:8889
-      delimiter: '\n\r\.\n\r'
+      delimiter: "\n\r\n"
+#    server2:
+#      addr: tcp://127.0.0.1:8889
+#      delimiter: "\n\r\n\r"
 
   pool:
     num_workers: 2
