--- a/tests/plugins/tcp/configs/.rr-tcp-init.yaml
+++ b/tests/plugins/tcp/configs/.rr-tcp-init.yaml
@@ -8,10 +8,14 @@ tcp:
   servers:
     tcp_access_point_1:
       addr: tcp://127.0.0.1:7777
-      delimiter: "\n\r\n"
-#    server2:
-#      addr: tcp://127.0.0.1:8889
-#      delimiter: "\n\r\n\r"
+      delimiter: "\r\n"
+    server2:
+      addr: tcp://127.0.0.1:8889
+      read_buf_size: 10
+    server3:
+      addr: tcp://127.0.0.1:8810
+      delimiter: "\r\n"
+      read_buf_size: 1
 
   pool:
     num_workers: 2
