--- a/tests/plugins/reload/configs/.rr-reload-3.yaml
+++ b/tests/plugins/reload/configs/.rr-reload-3.yaml
@@ -3,21 +3,8 @@ server:
   relay: pipes
   relay_timeout: 20s
 http:
-  address: '127.0.0.1:37388'
+  address: "127.0.0.1:37388"
   max_request_size: 1024
-  uploads:
-    forbid:
-      - .php
-      - .exe
-      - .bat
-  trusted_subnets:
-    - 10.0.0.0/8
-    - 127.0.0.0/8
-    - 172.16.0.0/12
-    - 192.168.0.0/16
-    - '::1/128'
-    - 'fc00::/7'
-    - 'fe80::/10'
   pool:
     num_workers: 2
     max_jobs: 0
