tcp test config update
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/tests/plugins/tcp/configs/.rr-tcp-init.yaml
+++ b/tests/plugins/tcp/configs/.rr-tcp-init.yaml
@@ -6,7 +6,7 @@ server:
 
 tcp:
   servers:
-    tcp_access_point_1:
+    server1:
       addr: tcp://127.0.0.1:7777
       delimiter: "\r\n"
     server2:
