--- a/tests/plugins/metrics/configs/.rr-http-metrics.yaml
+++ b/tests/plugins/metrics/configs/.rr-http-metrics.yaml
@@ -8,7 +8,7 @@ server:
 http:
   address: 127.0.0.1:13223
   max_request_size: 1024
-  middleware: [ ]
+  middleware: [ "http_metrics" ]
   pool:
     num_workers: 1
 
