fix golangci linters
Signed-off-by: Valery Piashchynski <piashchynski.valery@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,6 +6,7 @@ run:
     - .github
     - .git
     - tests/mocks
+    - tests/plugins
   modules-download-mode: readonly
   allow-parallel-runners: true
 
